4835 Velge Skatteetaten, Skatteinnkrever utland og Helfo som mottakere av fritekstbrev (#1620)
* Lagt til en metode med beskrivende navn

* Økt kodeverk versjon, lagt til ny rolle for FRITEKSTBREV

* Litt opprydding, lagt til FRITEKSTBREV og andre offentlige etater som mottaker. Lagt til ANDRE_OFFENTLIGE_ETATER som mottakertype.

* Vi har flyttet etat listen, lagt til nytt endepunkt for å hente liste over tilgjengelig-offentlige-etater, har lagt til DOKUMENTTITTEL enum til BrevmalFeltKode, refaktorert SKATT til SKATTEETATEN, tatt ut OrgNr enum til Etat enum og lagt til navn, lagt til FeltvalgAlternativKode for ETATer.

* Lagt til ETT felt orgNrEtater i BrevbestillingDto og BrevbestillingRequest

* La til FRITEKSTBREV i dokumentproduksjonsmapperen

* Tatt vekk ubrukt getter i BrevbestillingRequest

* Lagt til FRITEKSTBREV enum i Produserbaredokumenter enum, og lagt det til i BrevbestillingService.

* Refaktorert if-statements til switch-statements

* Litt merge fiksing

* Lagt til FRITEKSTBREV til DokgenMalMapperen, slik at den tar i bruk vår FritekstbrevOffentligEtat implementasjon av Fritekstbrev malen.

* Vi har inkludert MottakerType på alle FRITEKSTBREV

* Vi har lagt til Aktoerroller og Representerer (for fremtidig bruk) til FritekstbrevBrevbestilling, som vi trenger for å kunne generalisere et felles Fritekstbrev.

* Lagt til støtte for to nye enums som er tatt i bruk i generert test data i DokgenBrevbestillingTest

* Lagt til et nytt API kall for å hente mulige mottkere som er etater.

* Lagt til støtte for forhåndsvisning av PDF for OFFENTLIG_ETAT.

* Lagt til sjekk i DokGenService for å bygge mottakere fra orgNrEtater listen

* Separerte GenereltFritekstbrev med fritekstbrev

* La til valg om orientering beslutning til fritekstbrev

* Nullpointer håndtering oppdaget i test, fikset ved å lage en finnOrganisasjon metode i eregService, og ved å legge til en leslig feilmelding på hva som går galt når vi ikke finner mottaker